# rusmux

./: AUTHORS  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: release.yml
completions/: rusmux.bash  rusmux.fish  rusmux.zsh
src/: command.rs  commands.rs  config.rs  error.rs  main.rs  project.rs  stringorvec.rs  tmux.rs  window.rs
src/app/: actions.rs  cli.rs  config.rs  mod.rs
src/project_config/: error.rs  mod.rs  project.rs  stringorvec.rs  window.rs
src/tmux/: commands.rs  error.rs  mod.rs  project.rs  version.rs
