[package]
name = "rusmux"
version = "0.3.11"
description = "Automate tmux sessions configuration"
authors = ["Meir Kriheli <mkriheli@gmail.com>"]
edition = "2021"
repository = "https://github.com/MeirKriheli/rusmux"
homepage = "https://github.com/MeirKriheli/rusmux"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["tmux", "tmuxinator"]
readme = "README.md"

[dependencies]
clap = { version = "~4.3", features = ["cargo"] }
dialoguer = "0.10.4"
directories = "5.0.0"
glob = "~0.3"
regex = "1.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
shell-escape = "0.1.5"
shellexpand = "3.1.0"
shlex = "1.1.0"
thiserror = "1.0"
which = "4.4.0"
yaml-rust = "0.4"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.10.0"
# CI backends to support
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# The installers to generate for each app
installers = ["shell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "MeirKriheli/rusmux"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"

[package.metadata.release]
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
