[package]
name = "rusmux"
version = "0.8.0"
description = "Automate tmux sessions configuration"
authors = ["Meir Kriheli <mkriheli@gmail.com>"]
edition = "2021"
repository = "https://github.com/MeirKriheli/rusmux"
homepage = "https://github.com/MeirKriheli/rusmux"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["tmux", "tmuxinator"]
readme = "README.md"

[dependencies]
clap = { version = "~4.5", features = ["cargo", "derive"] }
colored = "3.0.0"
dialoguer = "0.11.0"
directories = "6.0.0"
glob = "~0.3"
regex = "1.10.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
shell-escape = "0.1.5"
shellexpand = "3.1.0"
shlex = "1.3.0"
thiserror = "2.0"
which = "7.0.0"
yaml-rust = "0.4"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
]
# The installers to generate for each app
installers = ["shell"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
# Path that installers should place binaries in
install-path = "CARGO_HOME"

[package.metadata.release]
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
