[package]
name = "rusmux"
version = "0.8.3"
description = "Automate tmux sessions configuration"
authors = ["Meir Kriheli <mkriheli@gmail.com>"]
edition = "2021"
repository = "https://github.com/MeirKriheli/rusmux"
homepage = "https://github.com/MeirKriheli/rusmux"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["tmux", "tmuxinator"]
readme = "README.md"

[dependencies]
clap = { version = "~4.5", features = ["cargo", "derive"] }
colored = "3.0.0"
dialoguer = "0.12.0"
directories = "6.0.0"
glob = "~0.3"
regex = "1.10.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
shell-escape = "0.1.5"
shellexpand = "3.1.0"
shlex = "1.3.0"
thiserror = "2.0"
which = "8.0.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.release]
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
